Fixes #5333 - More generic solution for severity level of warnings (throw/warn/ignore)
- Adds DbContextOptionsBuilder.ConfigureWarnings(Action<WarningsConfigurationBuilder>) fluent API. The API has two main functions:
    1) Allow a default warning behavior to be set: builder.DefaultBehavior(WarningBehavior)
    2) Configure explicit behavior for specific event ids. Throw, Log or Ignore. E.g. builder.Throw(CoreLoggingEventId.IncludeIgnoredWarning)
- Re-uses our logging event ids as the way to identify specific warning kinds.
- Adds relational fluent extension methods on builder for relational event ids.
- Warning exception generation logic centralized in InterceptingLogger via LogWarning EF extensions.
- Replaces previous ad-hoc warnings: query client eval and ambient transaction detected.

--- a/src/Microsoft.EntityFrameworkCore/Microsoft.EntityFrameworkCore.csproj
+++ b/src/Microsoft.EntityFrameworkCore/Microsoft.EntityFrameworkCore.csproj
@@ -217,6 +217,8 @@
     <Compile Include="Internal\ReferenceEqualityComparer.cs" />
     <Compile Include="Internal\ServiceProviderCache.cs" />
     <Compile Include="Internal\TypeExtensions.cs" />
+    <Compile Include="WarningBehavior.cs" />
+    <Compile Include="Internal\WarningsConfiguration.cs" />
     <Compile Include="Metadata\Builders\CollectionNavigationBuilder.cs" />
     <Compile Include="Metadata\Builders\CollectionNavigationBuilder`.cs" />
     <Compile Include="Metadata\Builders\EntityTypeBuilder.cs" />
@@ -498,6 +500,7 @@
     <Compile Include="ValueGeneration\ValueGeneratorFactory.cs" />
     <Compile Include="ValueGeneration\ValueGeneratorSelector.cs" />
     <Compile Include="ValueGeneration\ValueGenerator`.cs" />
+    <Compile Include="WarningsConfigurationBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\CoreStrings.resx">
